# worm-picker

./: .gitignore  LICENSE  README.md  dependencies.repos
src/worm_picker_core/: CMakeLists.txt  package.xml
src/worm_picker_core/launch/: worm_picker_core.launch.py
src/worm_picker_core/src/: worm_picker_main.cpp
src/worm_picker_core/src/calibration/: plate_calibration.cpp
src/worm_picker_core/src/networking/: ros_command_client.cpp  tcp_socket_server.cpp
src/worm_picker_core/src/tasks/: task_data_structure.cpp  task_factory.cpp  worm_picker_controller.cpp  worm_picker_task_controller.cpp
src/worm_picker_core/src/tools/: command_client.cpp  tic_toc.cpp
src/worm_picker_description/: CMakeLists.txt  README.md
src/worm_picker_description/meshes/workcell/: hotel_1.stl
src/worm_picker_description/urdf/: worm_picker_robot.urdf.xacro
src/worm_picker_moveit_config/: CMakeLists.txt  README.md
src/worm_picker_moveit_config/config/: joint_limits.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
src/worm_picker_moveit_config/rviz/: moveit_task.rviz
worm_picker_core/: CMakeLists.txt  package.xml
worm_picker_core/New/config/launch/: worm_picker_calibration.launch.py
worm_picker_core/New/src/utils/: timer_data_collector.cpp
worm_picker_core/Old/launch/: worm_picker_controller.launch.py  worm_picker_test.launch.py
worm_picker_core/Old/src/common/: dev_command_interface.cpp
worm_picker_core/Old/src/networking/: ros_command_client.cpp
worm_picker_core/Old/src/stages/: move_relative_data.cpp
worm_picker_core/Old/src/tasks/: task_data.cpp  task_factory.cpp
worm_picker_core/config/: initial_calibration_points.json  initial_calibration_points2.json  workstation_geometry.json
worm_picker_core/config/flowcharts/: flowchart_task_manager_2.py  task_manager_flowchart.py  test.py
worm_picker_core/config/flowcharts/new/: flowchart_builder.py  main.py  style_config.py
worm_picker_core/config/launch/: worm_picker_system.launch.py
worm_picker_core/config/logs/: timer_data.json
worm_picker_core/config/parameters/: command_templates_documentation.md  defined_stages.json  defined_tasks.json  hotel_data.json  initial_calibration_points.json  workstation_data.json  workstation_data_old.json  workstation_geometry.json  worm_picker_parameters.yaml
worm_picker_core/include/worm_picker_core/calibration/: calibration_state_machine.hpp  plate_calibration.hpp  plate_position_analyzer.hpp  robot_controller.hpp  user_input_node.hpp
worm_picker_core/include/worm_picker_core/common/: coordinate.hpp  dev_command_interface.hpp
worm_picker_core/include/worm_picker_core/core/: result.hpp
worm_picker_core/include/worm_picker_core/exceptions/: exceptions.hpp
worm_picker_core/include/worm_picker_core/networking/: ros_command_client.hpp  tcp_socket_server.hpp
worm_picker_core/include/worm_picker_core/stages/: move_relative_data.hpp  move_to_joint_data.hpp  move_to_point_data.hpp  stage_data.hpp
worm_picker_core/include/worm_picker_core/tasks/: task_data.hpp  task_data_structure.hpp  task_factory.hpp  worm_picker_controller.hpp
worm_picker_core/include/worm_picker_core/tools/: dev_command_interface.hpp  execution_timer.hpp  robot_utilities.hpp  task_output.hpp  timer_data_collector.hpp
worm_picker_core/include/worm_picker_core/utils/: circular_constraint_calculator.hpp  circular_motion_utils.hpp  execution_timer.hpp  global_node.hpp  parameter_utils.hpp  scoped_timer.hpp  timer_data_collector.hpp
worm_picker_core/launch/: worm_picker_calibration.launch.py  worm_picker_test.launch.py
worm_picker_core/src/apps/: cal_command_interface_main.cpp  command_networking_main.cpp  core_command_interface_main.cpp  plate_calibration_main.cpp  worm_picker_main.cpp
worm_picker_core/src/calibration/: calibration_state_machine.cpp  normalizing_testing.cpp  plate_calibration.cpp  plate_position_analyzer.cpp  plate_position_analyzer_test.cpp  robot_controller.cpp  user_input_node.cpp  workstation_json_generator.cpp
worm_picker_core/src/common/: coordinate.cpp  dev_command_interface.cpp
worm_picker_core/src/common/data_types/: coordinate.cpp  hotel_data.cpp  workstation_data.cpp
worm_picker_core/src/core/commands/: command_config.cpp  command_info.cpp
worm_picker_core/src/core/tasks/: planner_factory.cpp  task_data.cpp
worm_picker_core/src/infrastructure/parsers/: calibration_points_parser.cpp  command_parser.cpp  defined_tasks_parser.cpp  hotel_data_parser.cpp  workstation_data_parser.cpp
worm_picker_core/src/networking/: ros_command_client.cpp  tcp_socket_server.cpp
worm_picker_core/src/stages/: move_relative_data.cpp  move_to_joint_data.cpp  move_to_point_data.cpp
worm_picker_core/src/tasks/: task_data.cpp  task_data_structure.cpp  task_factory.cpp  worm_picker_controller.cpp
worm_picker_core/src/tools/: dev_command_interface.cpp  execution_timer.cpp  robot_utilities.cpp  timer_data_collector.cpp
worm_picker_core/src/utils/: circular_constraint_calculator.cpp  circular_motion_utils.cpp  execution_timer.cpp  scoped_timer.cpp  timer_data_collector.cpp
worm_picker_custom_msgs/: CMakeLists.txt  package.xml
worm_picker_custom_msgs/srv/: CalibrationCommand.srv  TaskCommand.srv
worm_picker_description/: CMakeLists.txt  package.xml
worm_picker_description/program_data/data_files/: defined_stages.json  defined_tasks.json  workstation_data.json  workstation_data_old.json
worm_picker_description/urdf/: common_colors.xacro  common_materials.xacro  gp4_macro.xacro  workcell_macro.xacro  worm_picker_robot.urdf.xacro
worm_picker_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
worm_picker_moveit_config/config/: initial_positions.yaml  isaac_ros_cumotion_planning.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_controllers_real.yaml  moveit_controllers_sim.yaml  ros2_controllers_sim.yaml  worm_picker_robot.ros2_control.xacro  worm_picker_robot.srdf  worm_picker_robot.urdf.xacro  worm_picker_robot.xrdf.yaml
worm_picker_moveit_config/rviz/: moveit_task_desktop.rviz  wormpicker_config.rviz
(+326 files in other folders)
