<?xml version="1.0"?>
<package format="3">
  <name>worm_picker_description</name>
  <version>0.0.1</version>
  <description>
    <p>
      OSU Fang-Yen Lab - Worm Picker Workcell configured for Motoman GP4 Robot.
    </p>
    <p>
      This package contains the robot and workcell description files, including URDF/Xacro files and meshes.
    </p>
  </description>

  <author>Logan Kaising</author>
  <maintainer email="lkaising@outlook.com">Logan Kaising</maintainer>

  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>xacro</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>xacro</exec_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
